UCF-APR2.4/ftr main/force-app/main/default/objects/VendorJsonSNE__c/VendorJsonSNE__c.object-meta.xml
<CustomObject>
    <label>VendorJsonSNE</label>
    <nameField>
        <displayFormat>VENSNE-{0000000}</displayFormat>
        <label>VendorJsonSNE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VendorJsonSNEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>