UCF-APR2.4/ftr main/force-app/main/default/objects/VendorJsonSNE__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <label>Long Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>