UCF-APR2.4/ftr main/force-app/main/default/objects/VendorJsonSNE__c/fields/SE__c.field-meta.xml
<CustomField>
    <fullName>SE__c</fullName>
    <label>S&amp;E</label>
    <length>10</length>
    <type>Text</type>
</CustomField>